# synapse

./: ,gitignore  .gitignore  README.md
wrappers/python/: build.py  publish.py  pyproject.toml
wrappers/python/synapse/: __init__.py  synapse.py
